--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header style="z-index: 9">
@@ -18,9 +18,9 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About us</a></li>
-          <li><a href="/contact.html">Contact us</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About us</a></li>
+          <li><a href="./contact.html">Contact us</a></li>
           <li><a href="#">EN</a></li>
           <li>
             <button class="button lo">Login</button>
@@ -228,13 +228,13 @@
     <footer>
       <div class="footer-top">
         <div class="footer-logo">
-          <img src="/assets/sevicelogo.png" alt="ServiceMarket Logo" />
+          <img src="./assets/sevicelogo.png" alt="ServiceMarket Logo" />
         </div>
         <div class="footer-social">
-          <a href="#"><img src="/assets/facebook.png" alt="Facebook" /></a>
-          <a href="#"><img src="/assets/twitter.png" alt="Twitter" /></a>
-          <a href="#"><img src="/assets/linkedin.png" alt="LinkedIn" /></a>
-          <a href="#"><img src="/assets/instagram.png" alt="Instagram" /></a>
+          <a href="#"><img src="./assets/facebook.png" alt="Facebook" /></a>
+          <a href="#"><img src="./assets/twitter.png" alt="Twitter" /></a>
+          <a href="#"><img src="./assets/linkedin.png" alt="LinkedIn" /></a>
+          <a href="#"><img src="./assets/instagram.png" alt="Instagram" /></a>
         </div>
       </div>
       <div class="footer-bottom">
