--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -23,9 +23,9 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/about.html">About us</a></li>
-          <li><a href="/contact.html">Contact us</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About us</a></li>
+          <li><a href="./contact.html">Contact us</a></li>
           <li><a href="#">EN</a></li>
           <li>
             <button class="button lo">Login</button>
@@ -118,9 +118,9 @@
         neque.
       </p>
       <div class="flex-container-imgs">
-        <img src="/assets/un1.png" />
-        <img src="/assets/un2.png" />
-        <img src="/assets/un3.png" />
+        <img src="./assets/un1.png" />
+        <img src="./assets/un2.png" />
+        <img src="./assets/un3.png" />
       </div>
     </div>
 
@@ -134,7 +134,7 @@
       </p>
       <div class="cards">
         <div class="card">
-          <img src="/assets/image1.png" alt="Service 1" />
+          <img src="./assets/image1.png" alt="Service 1" />
           <div class="card-content">
             <div class="rating">
               <span class="star">★</span> 4.5
@@ -148,7 +148,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/assets/image2.png" alt="Service 2" />
+          <img src="./assets/image2.png" alt="Service 2" />
           <div class="card-content">
             <div class="rating">
               <span class="star">★</span> 4.5
@@ -160,7 +160,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/assets/image3.png" alt="Service 3" />
+          <img src="./assets/image3.png" alt="Service 3" />
           <div class="card-content">
             <div class="rating">
               <span class="star">★</span> 4.5
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/assets/image4.png" alt="Service 4" />
+          <img src="./assets/image4.png" alt="Service 4" />
           <div class="card-content">
             <div class="rating">
               <span class="star">★</span> 4.5
@@ -215,7 +215,7 @@
     <div class="container">
       <div class="newsletter-section">
         <div class="image-container">
-          <img src="/assets/image4.png" alt="Hairdressing Scene" />
+          <img src="./assets/image4.png" alt="Hairdressing Scene" />
         </div>
         <div class="content-container">
           <h2>Subscribe to newsletter</h2>
@@ -223,7 +223,16 @@
             Sign up for our newsletter to stay up-to-date on the latest
             promotions, discounts, and new features releases.
           </p>
-          <div class="input-group">
+          <div
+            class="input-group"
+            style="
+              flex: 1;
+
+              font-size: 16px;
+
+              margin-right: 10px;
+            "
+          >
             <span class="icon">&#9993;</span>
             <input type="email" placeholder="Enter your mail" id="email" />
             <button>Subscribe</button>
@@ -235,24 +244,24 @@
     <footer>
       <div class="footer-top">
         <div class="footer-logo">
-          <img src="/assets/sevicelogo.png" alt="ServiceMarket Logo" />
+          <img src="./assets/sevicelogo.png" alt="ServiceMarket Logo" />
         </div>
         <div class="footer-social">
-          <a href="#"><img src="/assets/facebook.png" alt="Facebook" /></a>
-          <a href="#"><img src="/assets/twitter.png" alt="Twitter" /></a>
-          <a href="#"><img src="/assets/linkedin.png" alt="LinkedIn" /></a>
-          <a href="#"><img src="/assets/instagram.png" alt="Instagram" /></a>
+          <a href="#"><img src="./assets/facebook.png" alt="Facebook" /></a>
+          <a href="#"><img src="./assets/twitter.png" alt="Twitter" /></a>
+          <a href="#"><img src="./assets/linkedin.png" alt="LinkedIn" /></a>
+          <a href="#"><img src="./assets/instagram.png" alt="Instagram" /></a>
         </div>
       </div>
       <div class="footer-bottom">
         <div class="footer-column">
           <h3>Explore</h3>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About Us</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About Us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="./contact.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="footer-column">
