--- a/about.html
+++ b/about.html
@@ -241,8 +241,8 @@
         <div class="footer-column">
           <h3>Explore</h3>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About Us</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About Us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact Us</a></li>
