--- a/contact.html
+++ b/contact.html
@@ -190,13 +190,13 @@
     <footer>
       <div class="footer-top">
         <div class="footer-logo">
-          <img src="/assets/sevicelogo.png" alt="ServiceMarket Logo" />
+          <img src="./assets/sevicelogo.png" alt="ServiceMarket Logo" />
         </div>
         <div class="footer-social">
-          <a href="#"><img src="/assets/facebook.png" alt="Facebook" /></a>
-          <a href="#"><img src="/assets/twitter.png" alt="Twitter" /></a>
-          <a href="#"><img src="/assets/linkedin.png" alt="LinkedIn" /></a>
-          <a href="#"><img src="/assets/instagram.png" alt="Instagram" /></a>
+          <a href="#"><img src="./assets/facebook.png" alt="Facebook" /></a>
+          <a href="#"><img src="./assets/twitter.png" alt="Twitter" /></a>
+          <a href="#"><img src="./assets/linkedin.png" alt="LinkedIn" /></a>
+          <a href="#"><img src="./assets/instagram.png" alt="Instagram" /></a>
         </div>
       </div>
       <div class="footer-bottom">
